Fix credit font and spacing

--- a/css/bootstrap.steamlug.css
+++ b/css/bootstrap.steamlug.css
@@ -1124,3 +1124,4 @@ article.twit label.control-label{text-align:left;border:3px solid transparent;pa
 .dynamiclink img{float:left;margin-right:14px;max-height:88px}
 img.warning { box-shadow: 0 0 8px orange }
 img.replace { box-shadow: 0 0 8px red; border: 1px dashed red }
+.credit{padding:20px 0 10px 0}
